# chip8

./: meson.build
.cache/clangd/index/: chip.c.37BE9E220C9849D3.idx  chip.h.827EABF6FE1E2205.idx  default.h.B5BA75207EFE8BAB.idx  glad.c.A79424D508772653.idx  glad.h.9BF8A8E8F5E99FCF.idx  init.c.15D0A66F11E9B898.idx  init.h.563D38C72BC60671.idx  input.c.F1EFEFBD788431E6.idx  input.h.16BAA104108C5733.idx  loop.c.B1C35B1FF30B76D3.idx  loop.h.5BCBBBAF180F965E.idx  main.c.F38BD30A514E70D3.idx  render.c.AFAC076495F51628.idx  render.h.7BCF026D288046AC.idx
include/: chip.h  default.h  input.h  render.h
shaders/: basic.fsh  basic.vsh
src/: chip.c  glad.c  init.c  input.c  loop.c  main.c  meson.build  render.c
